refactor: html generation moved to separate class to separate concerns