@@ -2,7 +2,6 @@ package com.oocode;
 
 import com.opencsv.CSVReader;
 import com.opencsv.exceptions.CsvException;
-import org.jetbrains.annotations.Nullable;
 
 import java.io.FileWriter;
 import java.io.IOException;
@@ -10,13 +9,10 @@ import java.io.StringReader;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.time.format.TextStyle;
 import java.util.List;
-import java.util.Locale;
 
 import static java.lang.Integer.parseInt;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 public class Main {
   public static void main(String[] args) throws Exception {
@@ -31,28 +27,23 @@ public class Main {
   }
 
   private static void createPage(String url, LocalDate today, HttpClient httpClient) throws Exception {
+
     String response = httpClient.readUrl(url);
-
     WaveInfo extractedWaveInfo = extractWaveInfo(response);
-
-    writeHtml(extractedWaveInfo);
+    String generatedHtml = HtmlGenerator.generateHtmlFromWaveInfo(extractedWaveInfo);
+    writeHtml(generatedHtml);
   }
 
-  private static void writeHtml(WaveInfo waveInfo) throws IOException {
-    try (FileWriter myWriter = new FileWriter("index.html")) {
-      String dateFormatted = waveInfo.date().getDayOfWeek().getDisplayName(TextStyle.FULL, Locale.ENGLISH);
-
-      myWriter.write(
-          String.format("<html><body>You should have been at %s on %s - it was gnarly - waves up to %sm!</body></html>",
-              waveInfo.location(), dateFormatted, waveInfo.maxWaveSize()));
+  private static void writeHtml(String htmlContent) throws IOException {
+    try (FileWriter myWriter = new FileWriter("index.html")){
+    myWriter.write(htmlContent);
     }
   }
 
-  private static WaveInfo extractWaveInfo(String response) throws IOException, CsvException {
+  private static WaveInfo extractWaveInfo(String waveCsvData) throws IOException, CsvException {
     List<String[]> result;
-    try (CSVReader reader = new CSVReader(new StringReader(response))) {
-      result = reader.readAll().stream().skip(2).collect(toList());
-    }
+    CSVReader reader = new CSVReader(new StringReader(waveCsvData));
+    result = reader.readAll().stream().skip(2).toList();
     String[] strings = result.stream().max(comparing(o -> Double.valueOf(o[7]))).orElse(null);
 
     LocalDateTime date = LocalDateTime.ofEpochSecond(parseInt(strings[2]), 0, ZoneOffset.ofHours(10));
